deployment-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vercel-app
---
apiVersion: v1
kind: Service
metadata:
  namespace: vercel-app
  name: vercel-service
spec:
  type: LoadBalancer
  selector:
    app: vercel
  ports:
    - name: api
      port: 8000
      targetPort: 8000
    - name: content-resolver
      port: 9000
      targetPort: 9000
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: vercel-app
  name: vercel-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vercel
  template:
    metadata:
      labels:
        app: vercel
    spec:
      serviceAccountName: pod-sa
      containers:
        - name: vercel-redis
          image: redis:latest
          ports:
            - containerPort: 6379
        - name: vercel-content-resolver
          image: vercel-content-resolver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
        - name: vercel-api
          image: vercel-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
